--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>622</width>
-    <height>425</height>
+    <width>574</width>
+    <height>393</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>574</width>
+    <height>393</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Huffman Compression</string>
@@ -40,7 +46,7 @@
      </rect>
     </property>
     <property name="contextMenuPolicy">
-     <enum>Qt::ContextMenuPolicy::ActionsContextMenu</enum>
+     <enum>Qt::ActionsContextMenu</enum>
     </property>
     <property name="text">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;Choose a file&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -59,10 +65,10 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="frameShape">
-     <enum>QFrame::Shape::Box</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
-     <enum>QFrame::Shadow::Sunken</enum>
+     <enum>QFrame::Sunken</enum>
     </property>
     <property name="lineWidth">
      <number>1</number>
@@ -123,7 +129,7 @@
      </rect>
     </property>
     <property name="contextMenuPolicy">
-     <enum>Qt::ContextMenuPolicy::NoContextMenu</enum>
+     <enum>Qt::NoContextMenu</enum>
     </property>
     <property name="value">
      <number>0</number>
@@ -142,7 +148,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>622</width>
+     <width>574</width>
      <height>23</height>
     </rect>
    </property>
